fixes after review

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,16 +1,17 @@
 @import "fonts.css";
 @import "reboot.css";
-@import "../partials/login/login.css";
-@import "../partials/custom-input/custom-input.css";
-@import "../partials/button/button.css";
-@import "../partials/chat-block/chat-block.css";
-@import "../partials/chat/chat.css";
-@import "../partials/chat-list/chat-list.css";
-@import "../partials/chat-item/chat-item.css";
-@import "../partials/search-input/search-input.css";
-@import "../partials/profile/profile.css";
-@import "../partials/profile-list/profile-list.css";
-@import "../partials/profile-controls/profile-controls";
-@import "../partials/modal/modal";
-@import "../partials/input-file/input-file";
-@import "../partials/error/error";
+@import "variables.css";
+@import "../components/login/login.css";
+@import "../components/custom-input/custom-input.css";
+@import "../components/button/button.css";
+@import "../components/chat-block/chat-block.css";
+@import "../components/chat/chat.css";
+@import "../components/chat-list/chat-list.css";
+@import "../components/chat-item/chat-item.css";
+@import "../components/search-input/search-input.css";
+@import "../components/profile/profile.css";
+@import "../components/profile-list/profile-list.css";
+@import "../components/profile-controls/profile-controls";
+@import "../components/modal/modal";
+@import "../components/input-file/input-file";
+@import "../components/error/error";
