--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,7 @@
 $color-royal-blue: #3369f3;
 $color-storm-grey: #808185;
 $color-default-white: #ffffff;
+$color-default-black: #000000;
 $color-solitude: #e4edfd;
 $color-nobel: #999999;
 $color-white-smoke: #efefef;
