--- a/src/components/chat-item/chat-item.css
+++ b/src/components/chat-item/chat-item.css
@@ -1,112 +1,112 @@
 .chat-item {
-    position: relative;
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 12px 10px 12px;
+
+  cursor: pointer;
+
+  transition: background-color 0.3s ease;
+
+  &:hover,
+  &:focus {
+    background-color: $color-whisper;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: calc(100% - 20px);
+    height: 1px;
+    background-color: $color-whisper;
+  }
+
+  &__img {
+    width: 47px;
+    height: 47px;
+
+    background: $color-white-smoke;
+
+    border-radius: 50%;
+    overflow: hidden;
+
+    margin-right: 10px;
+
+    img {
+      object-fit: cover;
+    }
+  }
+
+  &__content {
+    flex-grow: 1;
+  }
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__title {
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 13px;
+
+    color: $color-nero;
+
+    margin: 0;
+  }
+
+  &__message-time {
+    font-weight: 500;
+    font-size: 9px;
+    line-height: 13px;
+
+    color: $color-nobel;
+
+    margin: 0 0 0 10px;
+  }
+
+  &__subtitle {
+    display: box;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+
+
+    color: $color-nobel;
+
+    margin: 4px 0 0;
+
+    flex: 1 1 auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 193px;
+    max-height: 30px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+
+    span {
+      color: $color-nero;
+    }
+  }
+
+  &__badge {
+    position: absolute;
+    min-width: 20px;
+    right: 10px;
+    bottom: 12px;
     display: flex;
     align-items: center;
-    padding: 12px 10px 12px;
+    justify-content: center;
+    background-color: $color-royal-blue;
+    color: $color-default-white;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 12px;
 
-    cursor: pointer;
-
-    transition: background-color 0.3s ease;
-
-    &:hover,
-    &:focus {
-      background-color: $color-whisper;
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      width: calc(100% - 20px);
-      height: 1px;
-      background-color: $color-whisper;
-    }
-
-    &__img {
-      width: 47px;
-      height: 47px;
-
-      background: $color-white-smoke;
-
-      border-radius: 50%;
-      overflow: hidden;
-
-      margin-right: 10px;
-
-      img {
-        object-fit: cover;
-      }
-    }
-
-    &__content {
-      flex-grow: 1;
-    }
-
-    &__header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    &__title {
-      font-weight: 600;
-      font-size: 13px;
-      line-height: 13px;
-
-      color: $color-nero;
-
-      margin: 0;
-    }
-
-    &__message-time {
-      font-weight: 500;
-      font-size: 9px;
-      line-height: 13px;
-
-      color: $color-nobel;
-
-      margin: 0 0 0 10px;
-    }
-
-    &__subtitle {
-      display: -webkit-box;
-      font-weight: 500;
-      font-size: 12px;
-      line-height: 15px;
-
-
-      color: $color-nobel;
-
-      margin: 4px 0 0;
-
-      flex: 1 1 auto;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      max-width: 193px;
-      max-height: 30px;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-
-      span {
-        color: $color-nero;
-      }
-    }
-
-    &__badge {
-      position: absolute;
-      min-width: 20px;
-      right: 10px;
-      bottom: 12px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: $color-royal-blue;
-      color: $color-default-white;
-      font-weight: 500;
-      font-size: 11px;
-      line-height: 12px;
-
-      padding: 4px;
-      border-radius: 50%;
-    }
+    padding: 4px;
+    border-radius: 50%;
+  }
 }
