--- a/src/components/custom-input/custom-input.css
+++ b/src/components/custom-input/custom-input.css
@@ -1,110 +1,109 @@
 .custom-input {
-    position: relative;
+  position: relative;
 
-    &.is-invalid {
-      .custom-input__error {
-          display: block;
-      }
+  &.is-invalid {
+    .custom-input__error {
+      display: block;
     }
+  }
 
   input {
-      min-width: 280px;
-      width: 100%;
-      height: 41px;
-      font-size: 13px;
-      line-height: 13px;
-      border: none;
-      border-bottom: 1px solid $color-royal-blue;
-      border-radius: 0;
+    min-width: 280px;
+    width: 100%;
+    height: 41px;
+    font-size: 13px;
+    line-height: 13px;
+    border: none;
+    border-bottom: 1px solid $color-royal-blue;
+    border-radius: 0;
 
-      padding: 10px 10px 10px 0;
+    padding: 10px 10px 10px 0;
 
-      background-color: transparent;
+    background-color: transparent;
 
-      outline: none;
+    outline: none;
 
-      transition: border-color 0.3s ease;
+    transition: border-color 0.3s ease;
 
-  &:focus ~ label {
-       top: -5px;
-       left: 0px;
-       font-style: normal;
-       font-weight: normal;
-       font-size: 9px;
-       line-height: 9px;
-       color: $color-nobel;
-  }
+    &:focus ~ label {
+      top: -5px;
+      left: 0;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 9px;
+      line-height: 9px;
+      color: $color-nobel;
+    }
 
-  &:not(:placeholder-shown) ~ label,
-  &:focus:not(:placeholder-shown) ~ label {
-       top: -5px;
-       left: 0px;
-       font-style: normal;
-       font-weight: normal;
-       font-size: 9px;
-       line-height: 9px;
-       color: $color-storm-grey;
-  }
+    &:not(:placeholder-shown) ~ label,
+    &:focus:not(:placeholder-shown) ~ label {
+      top: -5px;
+      left: 0;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 9px;
+      line-height: 9px;
+      color: $color-storm-grey;
+    }
 
-  &::-webkit-input-placeholder {
-       color: transparent
-   }
-  &::-moz-placeholder {
-       color: transparent
-   }
-  &:-moz-placeholder {
-       color: transparent
-   }
-  &:-ms-input-placeholder {
-       color: transparent
-   }
-  &:focus::-webkit-input-placeholder {
-       color: $color-storm-grey!important;
-   }
+    &::-webkit-input-placeholder {
+      color: transparent;
+    }
 
-  &:hover {
-       border-color: $color-grey-chateau;
-   }
-  }
+    &::-moz-placeholder {
+      color: transparent;
+    }
 
-  input:-webkit-autofill,
-  input:-webkit-autofill:hover,
-  input:-webkit-autofill:focus,
-  input:-webkit-autofill:active{
-      -webkit-box-shadow: 0 0 0px 1000px white inset;
+    &:-moz-placeholder {
+      color: transparent;
+    }
+
+    &:-ms-input-placeholder {
+      color: transparent;
+    }
+
+    &:focus::-webkit-input-placeholder {
+      /* stylelint-disable-next-line declaration-no-important */
+      color: $color-storm-grey !important;
+    }
+
+    &:hover {
+      border-color: $color-grey-chateau;
+    }
   }
 
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
   input:-webkit-autofill:focus,
   input:-webkit-autofill:active {
-      transition: background-color 5000s ease-in-out 0s;
+    box-shadow: 0 0 0 1000px $color-default-white inset;
+    transition: background-color 5000s ease-in-out 0s;
   }
 
   &__label {
-       color: $color-nobel;
-       font-size: 16px;
-       line-height: 18px;
-       font-weight: normal;
-       position: absolute;
-       pointer-events: none;
-       left: 0;
-       top: 12px;
-       transition: 0.2s ease all;
-       white-space: nowrap;
+    color: $color-nobel;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 0;
+    top: 12px;
+    transition: 0.2s ease all;
+    white-space: nowrap;
   }
 
   &__error {
-       position: absolute;
-       top: calc(100% + 7px);
-       left: 0;
-       display: none;
-       font-weight: 400;
-       font-size: 8px;
-       line-height: 8px;
+    position: absolute;
+    top: calc(100% + 7px);
+    left: 0;
+    display: none;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 8px;
 
-       letter-spacing: -0.2px;
-       color: $color-red-orange;
+    letter-spacing: -0.2px;
+    color: $color-red-orange;
   }
 }
 
