--- a/src/layouts/base.hbs
+++ b/src/layouts/base.hbs
@@ -11,5 +11,6 @@
     <div class="wrapper">
         {{{body}}}
     </div>
+    <script type="module" src="../index.ts"></script>
 </body>
 </html>
