--- a/src/styles/reboot.css
+++ b/src/styles/reboot.css
@@ -1,149 +1,149 @@
 *,
 ::after,
 ::before {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
 
 html {
-    font-style: normal;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 500;
-    font-family: "Inter", "Arial", sans-serif;
-    color: black;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+  font-family: "Inter", "Arial", sans-serif;
+  color: $color-default-black;
 
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizelegibility;
 }
 
 body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 
-    background-color: white;
+  background-color: $color-default-white;
 }
 
 a {
-    color: black;
-    text-decoration: none;
+  color: $color-default-black;
+  text-decoration: none;
 }
 
 img,
 video {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 textarea {
-    resize: none;
+  resize: none;
 }
 
 
 .container {
-    width: 100%;
-    max-width: 1920px;
-    margin: 0 auto;
-    padding: 0 40px;
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 0 40px;
 }
 
 
 .wrapper {
-    position: relative;
+  position: relative;
 
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    min-height: calc(100 * var(--vh, 1vh));
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100 * var(--vh, 1vh));
 
-.header,
-.footer {
+  .header,
+  .footer {
     flex-shrink: 0;
-}
+  }
 
-main {
+  main {
     flex-grow: 1;
-}
+  }
 }
 
 input:-webkit-autofill {
-    box-shadow: inset 0 0 0 1000px white;
+  box-shadow: inset 0 0 0 1000px $color-default-white;
 
-    -webkit-text-fill-color: white;
+  -webkit-text-fill-color: $color-default-white;
 }
 
 input,
 textarea {
-    border-radius: 0;
+  border-radius: 0;
 
-&::placeholder {
-     opacity: 1;
- }
+  &::placeholder {
+    opacity: 1;
+  }
 
-&:invalid {
-     box-shadow: none;
- }
+  &:invalid {
+    box-shadow: none;
+  }
 }
 
 select {
-    border-radius: 0;
+  border-radius: 0;
 }
 
 input {
-&::-ms-clear,
-&::-ms-reveal {
-     display: none;
- }
+  &::-ms-clear,
+  &::-ms-reveal {
+    display: none;
+  }
 }
 
 .visually-hidden {
-    position: absolute;
+  position: absolute;
 
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
 
-    white-space: nowrap;
+  white-space: nowrap;
 
-    border: 0;
+  border: 0;
 
-    clip: rect(0 0 0 0);
-    clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
 }
 
 .is-hidden {
-    display: none;
+  display: none;
 }
 
 .no-pointer {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 .sitemap {
-    display: flex;
-    flex-direction: column;
-    max-width: 300px;
-    margin: 100px auto 0;
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  margin: 100px auto 0;
 
-    li {
-        margin-bottom: 20px;
+  li {
+    margin-bottom: 20px;
 
-        a {
-            transition: opacity 0.3s ease;
-            &:hover,
-            &:focus {
-                opacity: 0.7;
-            }
-        }
+    a {
+      transition: opacity 0.3s ease;
+
+      &:hover,
+      &:focus {
+        opacity: 0.7;
+      }
     }
+  }
 }
