--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -8,34 +8,34 @@ title: Sitemap
     <div class="container">
         <ol class="sitemap">
             <li>
-                <a href="./login.hbs">Login</a>
+                <a href="login/login.hbs">Login</a>
             </li>
             <li>
-                <a href="./signin.hbs">Signin</a>
+                <a href="signin/signin.hbs">Signin</a>
             </li>
             <li>
-                <a href="./chat-page.hbs">Chat</a>
+                <a href="chat-page/chat-page.hbs">Chat</a>
             </li>
             <li>
-                <a href="./profile.hbs">Profile</a>
+                <a href="profile-page/profile.hbs">Profile</a>
             </li>
             <li>
-                <a href="./profile-data.hbs">Profile - change-data</a>
+                <a href="profile-data/profile-data.hbs">Profile - change-data</a>
             </li>
             <li>
-                <a href="./profile-password.hbs">Profile - change-password</a>
+                <a href="profile-password/profile-password.hbs">Profile - change-password</a>
             </li>
             <li>
-                <a href="./profile-load-avatar.hbs">Profile - load-avatar</a>
+                <a href="profile-load-avatar/profile-load-avatar.hbs">Profile - load-avatar</a>
             </li>
             <li>
-                <a href="./profile-add-login.hbs">Profile - add login</a>
+                <a href="profile-add-login/profile-add-login.hbs">Profile - add login</a>
             </li>
             <li>
-                <a href="./404.hbs">404</a>
+                <a href="404/404.hbs">404</a>
             </li>
             <li>
-                <a href="./500.hbs">500</a>
+                <a href="500/500.hbs">500</a>
             </li>
         </ol>
     </div>
