--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,10 +1,9 @@
 @import "fonts.css";
 @import "variables.css";
 @import "reboot.css";
-@import "../components/login/login.css";
-@import "../components/custom-input/custom-input.css";
+@import "../pages/login/login.css";
+@import "../components/input-wrapper/input-wrapper.css";
 @import "../components/button/button.css";
-@import "../components/chat-block/chat-block.css";
 @import "../components/chat/chat.css";
 @import "../components/chat-list/chat-list.css";
 @import "../components/chat-item/chat-item.css";
@@ -14,4 +13,5 @@
 @import "../components/profile-controls/profile-controls";
 @import "../components/modal/modal";
 @import "../components/input-file/input-file";
-@import "../components/error/error";
+@import "../components/error-page/error.css";
+@import "../components/input-error/input-error.css";
