--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -227,6 +227,7 @@
         border: 1px solid $color-grey-chateau;
       }
     }
+
     .input-error {
       top: calc(100% + 2px);
       left: 20px;
@@ -248,7 +249,7 @@
 
     cursor: pointer;
 
-    background-image: url('../assets/img/arrow.svg');
+    background-image: url("../assets/img/arrow.svg");
     background-repeat: no-repeat;
     background-position: center;
 
