--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -7,6 +7,7 @@
   flex-direction: column;
 
   &__header {
+    position: relative;
     display: flex;
     align-items: center;
 
@@ -68,28 +69,44 @@
   }
 
   &__controls {
+
     margin-left: auto;
-    background-color: transparent;
+    background: $color-white-smoke;
     border: none;
-    height: 15px;
-    width: 15px;
+    width: 25px;
+    height: 25px;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     margin-bottom: -3px;
     margin-right: 10px;
 
+    border-radius: 50%;
+
     cursor: pointer;
+
+    transition: opacity 0.3s ease;
+
+    &:hover,
+    &:focus {
+      opacity: 0.7;
+    }
 
     span {
       display: block;
       min-width: 3px;
       min-height: 3px;
-      background: $color-nero;
+      background: $color-royal-blue;
       border-radius: 50%;
 
       margin-bottom: 3px;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
     }
   }
 
@@ -258,6 +275,48 @@
     &:hover,
     &:focus {
       opacity: 0.7;
+    }
+  }
+
+  &__controls-block {
+    opacity: 0;
+    visibility: hidden;
+
+    position: absolute;
+    right: 0;
+    top: calc(100% + 10px);
+
+    display: flex;
+    flex-direction: column;
+
+    background: $color-default-white;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+    border-radius: 12px;
+
+    padding: 15px;
+
+    &.is-active {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  &__control {
+    justify-content: flex-start;
+    background-color: transparent;
+    color: $color-default-black;
+
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+
+    width: auto;
+    height: auto;
+
+    margin-bottom: 15px;
+
+    &:last-of-type {
+      margin-bottom: 0;
     }
   }
 }
