--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -32,4 +32,29 @@
     font-size: 11px;
     line-height: 11px;
   }
+
+  &--profile {
+    width: auto;
+    background-color: transparent;
+    display: inline-flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 12px;
+
+    margin-left: auto;
+
+    color: $color-nobel;
+
+    transition: opacity 0.3s ease;
+
+    svg {
+      margin-left: 8px;
+    }
+
+    &:hover,
+    &:focus {
+      opacity: 0.7;
+    }
+  }
 }
