--- a/src/components/profile-list/profile-list.css
+++ b/src/components/profile-list/profile-list.css
@@ -12,14 +12,20 @@
     align-items: center;
     justify-content: center;
 
+    border: none;
     background-color: $color-white-smoke;
 
     cursor: pointer;
 
     transition: background-color 0.3s ease;
 
+    padding: 0;
+
     img {
       object-fit: cover;
+      width: 100%;
+      height: 100%;
+      object-position: center;
     }
 
     span {
