--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -19,6 +19,7 @@
 
   &__back-btn {
     min-height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -47,5 +48,13 @@
       align-items: center;
       justify-content: center;
     }
+  }
+
+  .profile-error {
+    display: block;
+    position: static;
+    text-align: center;
+    margin: 10px 0;
+    font-size: 14px;
   }
 }
