--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -298,7 +298,7 @@
     flex-direction: column;
 
     background: $color-default-white;
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.14);
     border-radius: 12px;
 
     padding: 15px;
